# sft-codebase-dataset

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: repos.yaml
src/: __init__.py  auto_discover.py  codebase_loader.py  config.py  dependency_resolver.py  diff_generator.py  main.py  repo_discovery.py  sft_formatter.py  version_fetcher.py
